--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public -b main"
   },
   "dependencies": {
     "change-case": "^4.1.2",
