--- a/theme/package.json
+++ b/theme/package.json
@@ -44,6 +44,7 @@
     "react-flex-ready": "^1.1.0",
     "react-google-recaptcha": "^1.0.5",
     "react-helmet": "^5.2.1",
+    "react-vertical-timeline-component": "^2.6.2",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
