Fixed asset paths

--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,7 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b main"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "change-case": "^4.1.2",
